concord_macros/tests/trybuild/fail/pagination/custom_pagination_missing_default.stderr
error: custom pagination must use `paginate endpoint_state Controller bindings Bindings { ... }`
  --> tests/trybuild/fail/pagination/custom_pagination_missing_default.rs:62:18
   |
62 |         paginate HeaderCursorPagination
   |                  ^^^^^^^^^^^^^^^^^^^^^^
